@@ -2,7 +2,7 @@
 package edu.colorado.phet.moleculepolarity.common.view;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
-import edu.colorado.phet.moleculepolarity.common.model.TwoAtomsMolecule;
+import edu.colorado.phet.moleculepolarity.common.model.DiatomicMolecule;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
 import edu.umd.cs.piccolo.event.PInputEvent;
@@ -16,11 +16,11 @@ import edu.umd.cs.piccolo.event.PInputEvent;
  */
 public class MoleculeRotationHandler extends PBasicInputEventHandler {
 
-    private final TwoAtomsMolecule molecule;
+    private final DiatomicMolecule molecule;
     private final PNode dragNode;
     double previousAngle;
 
-    public MoleculeRotationHandler( TwoAtomsMolecule molecule, PNode dragNode ) {
+    public MoleculeRotationHandler( DiatomicMolecule molecule, PNode dragNode ) {
         this.molecule = molecule;
         this.dragNode = dragNode;
     }
